--- a/style/footer.css
+++ b/style/footer.css
@@ -11,3 +11,64 @@ footer div {
     width: 100vw;
     height: 2vh;
 }
+
+@media (max-width: 2000px) and (max-height: 1500px) {
+    footer {
+        font-size: 1.3vw;
+    }
+}
+@media (max-width: 1500px) and (max-height: 1500px) {
+    footer {
+        font-size: 1.7vw;
+    }
+}
+@media (max-width: 1000px) and (max-height: 1500px) {
+    footer {
+        font-size: 2.2vw;
+    }
+}
+@media (max-width: 800px) and (max-height: 1500px) {
+    footer {
+        font-size: 2.5vw;
+        height: 10vh;
+    }
+}
+@media (max-width: 600px) and (max-height: 1400px) {
+    footer {
+        font-size: 3.5vw;
+        height: 15vh;
+    }
+    footer div {
+        width: 90%;
+        margin: 0 auto;
+    }
+}
+@media (max-width: 2000px) and (max-height: 1250px) {
+    footer {
+        margin-top: 10vh;
+    }
+}
+@media (max-width: 2000px) and (max-height: 1100px) {
+    footer {
+        margin-top: 215px;
+        height: 20vh;
+    }
+}
+@media (max-width: 2000px) and (max-height: 800px) {
+    footer {
+        margin-top: 285px;
+        height: 25vh;
+    }
+}
+@media (max-width: 2000px) and (max-height: 650px) {
+    footer {
+        margin-top: 320px;
+        height: 25vh;
+    }
+}
+@media (max-width: 2000px) and (max-height: 550px) {
+    footer {
+        margin-top: 360px;
+        height: 35vh;
+    }
+}
