--- a/style/map.css
+++ b/style/map.css
@@ -32,28 +32,24 @@
 
     font-size: 1.1vw;
 }
-@media screen and (max-height: 630px) {
+@media screen and (max-width: 2000px) and (max-height: 1500px) {
     .map_container {
-        height: 90vh;
+        height: 55vh;
     }
 }
-@media screen and (max-height: 550px) {
-    .map_container {
-        height: 100vh;
+@media screen and (max-width: 1700px) and (max-height: 1500px) {
+    .map_text {
+        font-size: 23px;
     }
 }
-@media screen and (max-height: 490px) {
-    .map_container {
-        height: 110vh;
+@media screen and (max-width: 600px) and (max-height: 1500px) {
+    .map_text {
+        font-size: 20px;
     }
 }
-@media screen and (max-height: 450px) {
-    .map_container {
-        height: 120vh;
+@media screen and (max-width: 1100px) and (max-height: 900px) {
+    .map_text {
+        font-size: 16px;
     }
 }
-@media screen and (max-height: 400px) {
-    .map_container {
-        height: 130vh;
-    }
-}
+
