--- a/dropdown_menu.css
+++ b/dropdown_menu.css
@@ -144,6 +144,11 @@
         margin-left: 50px;
     }
 }
+@media screen and (max-width: 500px) and (max-height: 800px) {
+    .dropdown_a {
+        font-size: 14px;
+    }
+}
 @media screen and (max-width: 400px) and (max-height: 800px) {
     .dropdown_btn {
         margin-bottom: 35px;
