--- a/style/dropdown_menu.css
+++ b/style/dropdown_menu.css
@@ -28,7 +28,7 @@
 }
 .dropdown_a div {
     display: flex;
-    width: 95%;
+    width: 100%;
     height: 100%;
     margin: 0 auto;
     justify-content: center;
@@ -140,8 +140,13 @@
     .dropdown_a {
         width: 200px;
         height: 40px;
-        font-size: 18px;
+        font-size: 16px;
         margin-left: 50px;
+    }
+}
+@media screen and (max-width: 500px) and (max-height: 800px) {
+    .dropdown_a {
+        font-size: 14px;
     }
 }
 @media screen and (max-width: 400px) and (max-height: 800px) {
