--- a/order/order.css
+++ b/order/order.css
@@ -83,7 +83,7 @@ input[type="text"]
     height: 40px;
     margin-bottom: 20px;
 }
-.order_delivery_button button {
+.add_delivery {
     width: 100%;
     height: 100%;
     text-decoration: none;
@@ -99,6 +99,12 @@ input[type="text"]
     text-align: center;
     color: rgba(0, 0, 0, 0.7);
     cursor: pointer;
+    line-height: 40px;
+
+    -webkit-user-select: none;  
+    -moz-user-select: none;    
+    -ms-user-select: none;      
+    user-select: none;
 }
 .order_delivery {
     width: 600px;
@@ -141,9 +147,10 @@ input[type="text"]
     height: 50px;
     margin-bottom: 20px;
 }
-.delivery_adress_button button {
+.delivery_adress_btn {
+    padding-top: 10px;
     width: 100%;
-    height: 100%;
+    height: 95%;
     text-decoration: none;
     border: none;
     background: linear-gradient(180deg, #FED852 0%, #FFB32D 79.53%);
@@ -294,7 +301,7 @@ textarea {
     .order_delivery_button {
         width: 70%;
     }
-    .order_delivery_button button {
+    .add_delivery {
         font-size: 14px;
     }
 }
