--- a/style/delivery.css
+++ b/style/delivery.css
@@ -1168,7 +1168,7 @@ sup {
 }
 @media screen and (max-width: 1300px) and (max-height: 900px){
     .concrete_delivery {
-        height: 110vh;
+        height: 125vh;
     }
 }
 @media screen and (max-width: 1000px) and (max-height: 900px){
@@ -1558,6 +1558,163 @@ sup {
 @media screen and (max-width: 330px) and (max-height: 500px) {
     .concrete_delivery {
         height: 340vh;
+    }
+}
+
+@media screen and (max-width: 1400px) and (max-height: 480px) {
+    .concrete_delivery {
+        height: 235vh;
+    }
+}
+@media screen and (max-width: 1400px) and (max-height: 425px) {
+    .concrete_delivery {
+        height: 255vh;
+    }
+}
+@media screen and (max-width: 1400px) and (max-height: 380px) {
+    .concrete_delivery {
+        height: 285vh;
+    }
+}
+@media screen and (max-width: 1400px) and (max-height: 350px) {
+    .concrete_delivery {
+        height: 310vh;
+    }
+}
+@media screen and (max-width: 1400px) and (max-height: 320px) {
+    .concrete_delivery {
+        height: 330vh;
+    }
+}
+@media screen and (max-width: 1400px) and (max-height: 300px) {
+    .concrete_delivery {
+        height: 350vh;
+    }
+    .download_button {
+        height: 12vh;
+    }
+}
+
+@media screen and (max-width: 1100px) and (max-height: 400px) {
+    .concrete_delivery {
+        height: 230vh;
+    }
+}
+@media screen and (max-width: 1100px) and (max-height: 370px) {
+    .concrete_delivery {
+        height: 250vh;
+    }
+}
+@media screen and (max-width: 1100px) and (max-height: 340px) {
+    .concrete_delivery {
+        height: 270vh;
+    }
+}
+@media screen and (max-width: 1100px) and (max-height: 310px) {
+    .concrete_delivery {
+        height: 300vh;
+    }
+}
+@media screen and (max-width: 1100px) and (max-height: 290px) {
+    .concrete_delivery {
+        height: 320vh;
+    }
+}
+@media screen and (max-width: 1000px) and (max-height: 500px) {
+    .concrete_delivery {
+        height: 300vh;
+    }
+}
+@media screen and (max-width: 1000px) and (max-height: 420px) {
+    .concrete_delivery {
+        height: 365vh;
+    }
+}
+@media screen and (max-width: 1000px) and (max-height: 370px) {
+    .concrete_delivery {
+        height: 395vh;
+    }
+}
+@media screen and (max-width: 1000px) and (max-height: 340px) {
+    .concrete_delivery {
+        height: 425vh;
+    }
+}
+@media screen and (max-width: 1000px) and (max-height: 320px) {
+    .concrete_delivery {
+        height: 455vh;
+    }
+}
+@media screen and (max-width: 1000px) and (max-height: 300px) {
+    .concrete_delivery {
+        height: 485vh;
+    }
+}
+@media screen and (max-width: 600px) and (max-height: 400px) {
+    .concrete_delivery {
+        height: 340vh;
+    }
+}
+@media screen and (max-width: 600px) and (max-height: 380px) {
+    .concrete_delivery {
+        height: 370vh;
+    }
+    .delivery_txt {
+        margin-top: 15%;
+    }
+}
+@media screen and (max-width: 600px) and (max-height: 360px) {
+    .concrete_delivery {
+        height: 390vh;
+    }
+}
+@media screen and (max-width: 600px) and (max-height: 340px) {
+    .concrete_delivery {
+        height: 410vh;
+    }
+}
+@media screen and (max-width: 600px) and (max-height: 320px) {
+    .concrete_delivery {
+        height: 440vh;
+    }
+}
+@media screen and (max-width: 600px) and (max-height: 300px) {
+    .concrete_delivery {
+        height: 460vh;
+    }
+}
+@media screen and (max-width: 550px) and (max-height: 400px) {
+    .delivery_cards {
+        height: 720px;
+    }
+    .concrete_delivery {
+        height: 1200px;
+    }
+    .delivery_card {
+        height: 335px;
+    }
+    .flight_price {
+        margin-top: 10px;
+    }
+    .flight_texts {
+        margin-top: 8px;
+    }
+    .price_time {
+        margin-top: 8px;
+    }
+    .price_downtime {
+        margin-top: 10px;
+    }
+}
+@media screen and (max-width: 500px) and (max-height: 550px) {
+    .delivery_cards {
+        height: 1300px;
+    }
+    .concrete_delivery {
+        height: 1850px;
+    }
+    .delivery_card {
+        height: 390px;
     }
 }
 
