--- a/style/footer.css
+++ b/style/footer.css
@@ -72,3 +72,28 @@ footer div {
         height: 35vh;
     }
 }
+@media (max-width: 1000px) and (max-height: 350px) {
+    footer {
+        height: 55vh;
+    }
+}
+@media (max-width: 700px) and (max-height: 350px) {
+    footer {
+        height: 45vh;
+    }
+}
+@media (max-width: 600px) and (max-height: 350px) {
+    footer {
+        height: 65vh;
+    }
+}
+@media (max-width: 500px) and (max-height: 350px) {
+    footer {
+        height: 45vh;
+    }
+}
+@media (max-width: 350px) and (max-height: 350px) {
+    footer {
+        height: 35vh;
+    }
+}
