--- a/style/main.css
+++ b/style/main.css
@@ -1112,6 +1112,15 @@
     .main_heading {
         font-size: 1.7vw;
     }
+    .main {
+        height: 130vh;
+    }
+    .main_text {
+        height: 110vh;
+    }
+    .main_info {
+        margin-top: 20px;
+    }
 }
 @media (max-width: 1100px) and (max-height: 400px) {
     .info_content {
@@ -1123,7 +1132,7 @@
 }
 @media (max-width: 750px) and (max-height: 400px) {
     .main {
-        height: 100vh;
+        height: 125vh;
     }
     .main_text {
         height: 75vh;
@@ -1131,11 +1140,109 @@
     .main_heading {
         font-size: 3vw;
     }
+    .main_text {
+        height: 110vh;
+    }
 }
+
 @media (max-width: 650px) and (max-height: 400px) {
     .main_heading {
         height: 30vh;
         font-size: 3.4vw;
+    }
+}
+@media (max-width: 550px) and (max-height: 400px) {
+    .main {
+        height: 155vh;
+    }
+    .main_button {
+        width: 30vw;
+    }
+    .main_heading {
+        font-size: 4.4vw;
+    }
+}
+@media (max-width: 450px) and (max-height: 400px) {
+    .main_heading {
+        font-size: 5vw;
+    }
+}
+@media (max-width: 400px) and (max-height: 400px) {
+    .main_heading {
+        font-size: 6vw;
+    }
+    .main_button {
+        width: 50vw;
+    }
+}
+@media (max-width: 350px) and (max-height: 400px) {
+    .main_heading {
+        font-size: 7vw;
+    }
+}
+
+/* ---------------- */
+@media (max-width: 1400px) and (max-height: 350px) {
+    .main {
+        height: 145vh;
+    }
+    .main_text {
+        height: 130vh;
+    }
+    .main_info {
+        height: 60vh;
+    }
+    .info_content {
+        height: 15vh;
+    }
+}
+@media (max-width: 550px) and (max-height: 350px) {
+    .main_button button {
+        font-size: 2vw;
+    }
+    .main_button {
+        width: 130px;
+        height: 10vh;
+    }
+    .main {
+        height: 160vh;
+    }
+}
+
+@media (max-width: 500px) and (max-height: 350px) {
+    .main {
+        height: 180vh;
+    }
+    .main_heading {
+        font-size: 4.4vw;
+    }
+    .main_button button {
+        font-size: 3vw;
+    }
+}
+@media (max-width: 400px) and (max-height: 350px) {
+    .main_heading {
+        font-size: 5.4vw;
+    }
+}
+@media (max-width: 300px) and (max-height: 350px) {
+    .main_heading {
+        font-size: 6.4vw;
+    }
+}
+@media (max-width: 550px) and (max-height: 300px) {
+    .main_heading {
+        font-size: 4vw;
+    }
+}
+@media (max-width: 400px) and (max-height: 300px) {
+    .main_heading {
+        font-size: 5vw;
+    }
+}
+@media (max-width: 350px) and (max-height: 300px) {
+    .main_heading {
+        font-size: 6vw;
     }
 }
 
